Feat:Issues Updated and New issues Fixed

--- a/src/administration/admins/templates/admins/product_form.html
+++ b/src/administration/admins/templates/admins/product_form.html
@@ -262,6 +262,21 @@
                         <div class="card mb-4">
 
                             <div class="card-header">
+                                <h4>Short Description</h4>
+                            </div>
+
+                            <div class="card-body">
+
+                                {# DESC #}
+                                <div class="mb-4">
+                                    {{ form.short_description }}
+                                </div>
+                            </div>
+                        </div>
+                        {# DESCRIPTION #}
+                        <div class="card mb-4">
+
+                            <div class="card-header">
                                 <h4>Description</h4>
                             </div>
 
