--- a/src/website/templates/website/cart.html
+++ b/src/website/templates/website/cart.html
@@ -59,9 +59,12 @@
                                                     </p>{% endif %}
                                             </td>
                                             <td style="padding: 30px">
-                                                <del class="text-secondary">{% if object.product_weight %}
-                                                    {{ object.product_weight.price }}{% else %}
-                                                    {{ object.product.price }}{% endif %}</del>
+                                                {% if object.product.discount %}
+                                                    <del class="text-secondary">{% if object.product_weight %}
+                                                        {{ object.product_weight.price }}
+                                                    {% else %}
+                                                        {{ object.product.price }}{% endif %}</del>
+                                                {% endif %}
                                                 <br>
                                                 <span>{% if object.product_weight %}
                                                     {{ object.product_weight.get_product_weight_discounted_price }}{% else %}
@@ -104,10 +107,10 @@
                             </form>
                         </div>
                     {% else %}
-                       <div class="text-center">
-                        <h4 class="text-danger text-center">Cart is Empty</h4>
-                        <a href="{% url 'website:shop' %}" class="btn custom_btn text-center mt-4">Back to Shop </a>
-                       </div>
+                        <div class="text-center">
+                            <h4 class="text-danger text-center">Cart is Empty</h4>
+                            <a href="{% url 'website:shop' %}" class="btn custom_btn text-center mt-4">Back to Shop </a>
+                        </div>
 
                     {% endif %}
                 </div>
