Issue Fixed : description issue fixed

--- a/src/administration/admins/templates/admins/product_detail.html
+++ b/src/administration/admins/templates/admins/product_detail.html
@@ -159,6 +159,10 @@
 
 
                             <div class="mt-4 text-muted">
+                                <h5 class="fs-15">Short Description :</h5>
+                                <p>{{ object.short_description|safe }}</p>
+                            </div>
+                            <div class="mt-4 text-muted">
                                 <h5 class="fs-15">Description :</h5>
                                 <p>{{ object.description|safe }}</p>
                             </div>
