feat: Api Updated Cart Item with extra fields

--- a/src/administration/admins/templates/admins/product_detail.html
+++ b/src/administration/admins/templates/admins/product_detail.html
@@ -206,7 +206,8 @@
                                                 </tr>
                                                 <tr>
                                                     <th scope="row">Product Deal</th>
-                                                    <td>{{ object.productdeal.started_at }} - {{ object.productdeal.expire_at }}</td>
+                                                    <td>{{ object.productdeal.started_at }}
+                                                        - {{ object.productdeal.expire_at }}</td>
                                                 </tr>
 
                                                 </tbody>
