--- a/src/website/templates/website/cart.html
+++ b/src/website/templates/website/cart.html
@@ -153,14 +153,14 @@
                                                     <p class="mb-1">{{ discount_amount|floatformat:"2" }}</p>
                                                 </td>
                                             </tr>
-                                            <tr>
-                                                <td>
-                                                    <p class="mb-1">Shipping Charges</p>
-                                                </td>
-                                                <td>
-                                                    <p class="mb-1">{{ sipping_charges|floatformat:"2" }}</p>
-                                                </td>
-                                            </tr>
+{#                                            <tr>#}
+{#                                                <td>#}
+{#                                                    <p class="mb-1">Shipping Charges</p>#}
+{#                                                </td>#}
+{#                                                <td>#}
+{#                                                    <p class="mb-1">{{ sipping_charges|floatformat:"2" }}</p>#}
+{#                                                </td>#}
+{#                                            </tr>#}
                                             </tbody>
                                         </table>
                                     </div>
