--- a/templates/website/include/sidebar.html
+++ b/templates/website/include/sidebar.html
@@ -41,10 +41,10 @@
                                         <span>Discounted Amount:</span>
                                         <span>{{ discounted_amount|floatformat:"2"  }}</span>
                                     </li>
-                                    <li>
-                                        <span>Shipping Charged :</span>
-                                        <span> {{sipping_charges|floatformat:"2" }}</span>
-                                    </li>
+{#                                    <li>#}
+{#                                        <span>Shipping Charged :</span>#}
+{#                                        <span> {{sipping_charges|floatformat:"2" }}</span>#}
+{#                                    </li>#}
                                     <li>
                                         <span>Sub Total:</span>
                                         <span>{{sub_total|floatformat:"2" }}</span>
