Links Name Change Contact uS

--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -57,7 +57,7 @@
                                 <a class="nav-link" href="{% url 'website:about_us' %}">About Us</a>
                             </li>
                             <li class="nav-item nav_item_has_child dropdown px-2">
-                                <a class="nav-link" href="{% url 'website:contact_us' %}">Contacts</a>
+                                <a class="nav-link" href="{% url 'website:contact_us' %}">Contact Us</a>
                             </li>
                         </ul>
                     </div>
