--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -1045,7 +1045,7 @@
                 <div class="modal-content p-4">
                     <div class="d-flex justify-content-between align-items-center p-4">
                         <h5 class="modal-title" id="RateUsTitle">Please Rate Our Website</h5>
-                        <a href="javascript:void(0)" id="closeModalButton" class="float-end">❌</a>
+                        <a href="javascript:void(0)" id="closeModalButton" class="float-end text-dark"><i class="fa fa-times"></i></a>
                     </div>
                     <p class="modal-title text-center " id="RateUsTitle">HOW EASY TO OR DIFFICULT WAS IT TO USE
                         OUR WEBSITE</p>
