UPDATE:Changes Made on Api ANd Web From Client

--- a/src/administration/client/templates/client/order_invoice.html
+++ b/src/administration/client/templates/client/order_invoice.html
@@ -98,6 +98,14 @@
                                         </tr>
                                         <!-- end tr -->
                                         <tr>
+                                            <th scope="row" colspan="4" class="border-0 text-end">
+                                                Tax :
+                                            </th>
+                                            <td class="border-0 text-end">{{ object.tax }}</td>
+                                        </tr>
+                                        <!-- end tr -->
+
+                                        <tr>
                                             <th scope="row" colspan="4" class="border-0 text-end">Sub Total</th>
                                             <td class="border-0 text-end"><h4
                                                     class="m-0 fw-semibold">{{ object.sub_total }}</h4></td>
