--- a/src/administration/admins/templates/admins/product_form.html
+++ b/src/administration/admins/templates/admins/product_form.html
@@ -241,13 +241,43 @@
                                     </div>
                                     <div class="col-lg-4">
                                         <div class="mb-4">
-                                            <label for="{{ form.tax.id_for_label }}"
-                                                   class="form-label">{{ form.tax.label }}</label>
-                                            {% render_field form.tax class="form-control" %}
-                                            <small class="form-text text-muted">{{ form.tax.help_text }}</small>
-                                            {% if form.tax.errors %}
+                                            <label for="{{ form.igst.id_for_label }}"
+                                                   class="form-label">{{ form.igst.label }}</label>
+                                            {% render_field form.igst class="form-control" %}
+                                            <small class="form-text text-muted">{{ form.igst.help_text }}</small>
+                                            {% if form.igst.errors %}
                                                 <ul class="text-danger">
-                                                    {% for error in form.tax.errors %}
+                                                    {% for error in form.igst.errors %}
+                                                        <li>{{ error }}</li>
+                                                    {% endfor %}
+                                                </ul>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <label for="{{ form.sgst.id_for_label }}"
+                                               class="form-label">{{ form.sgst.label }}</label>
+                                        {% render_field form.sgst class="form-control" placeholder='' %}
+                                        <small class="form-text text-muted">{{ form.sgst.help_text }}</small>
+                                        {% if form.sgst.errors %}
+                                            <ul class="text-danger">
+                                                {% for error in form.sgst.errors %}
+                                                    <li>{{ error }}</li>
+                                                {% endfor %}
+                                            </ul>
+                                        {% endif %}
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-4">
+                                            <label for="{{ form.cgst.id_for_label }}"
+                                                   class="form-label">{{ form.cgst.label }}</label>
+                                            {% render_field form.cgst class="form-control" %}
+                                            <small class="form-text text-muted">{{ form.cgst.help_text }}</small>
+                                            {% if form.cgst.errors %}
+                                                <ul class="text-danger">
+                                                    {% for error in form.cgst.errors %}
                                                         <li>{{ error }}</li>
                                                     {% endfor %}
                                                 </ul>
