--- a/src/administration/client/templates/client/shipment_detail.html
+++ b/src/administration/client/templates/client/shipment_detail.html
@@ -7,7 +7,7 @@
         <div class="container">
             <div class="row">
                 {% include 'client/include/dashboard_navbar.html' %}
-                <div class="col col-lg-6">
+                <div class="col col-lg-9">
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="tab_dashboard" role="tabpanel">
                             <div class="total_revenue aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
@@ -43,6 +43,11 @@
                                                     <br>
                                                     <label class="  fs-11">Description </label>
                                                     <p class=" float-end  fs-11">{{ object.description }} </p>
+                                                </div>
+                                                <div>
+                                                    <br>
+                                                    <label class="  fs-11">Shipment Status </label>
+                                                    <p class=" float-end  fs-11">{{ object.shipment_status }} </p>
                                                 </div>
                                                 <div>
                                                     <br>
