--- a/src/apps/razorpay/templates/razorpay/success.html
+++ b/src/apps/razorpay/templates/razorpay/success.html
@@ -5,7 +5,9 @@
 {% load static %}
 
 {% block content %}
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
 
     <section class=" mt-4 clearfix aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
         <div class="container ">
@@ -13,16 +15,16 @@
                 <div class="col-6">
                     <div class="card p-4">
                         <div class="card-header">
-                        <h1 class="title text-center">Payment Successful</h1>
+                            <h1 class="title text-center">Payment Successful</h1>
 
                         </div>
                         <div class="row mt-4">
                             <div class="col-md-12">
-                              <span class="text-success">Your payment has been successfully processed.</span>
+                                <span class="text-success">Your payment has been successfully processed.</span>
                             </div>
                         </div>
-                            <!-- Payment Button -->
-                            <a href="{% url 'client:order_list' %}" class="btn btn-secondary mt-4 mb-4" >Go To Orders</a>
+                        <!-- Payment Button -->
+                        <a href="{% url 'client:order_list' %}" class="btn btn-secondary mt-4 mb-4">Go To Orders</a>
                     </div>
                 </div>
 
@@ -30,5 +32,88 @@
         </div>
 
     </section>
+
+
+
+    <style>
+        .star-rating .fa-star {
+            font-size: 1rem;
+            color: gray;
+            cursor: pointer;
+        }
+
+        .star-rating .fa-star.checked {
+            color: gold;
+        }
+    </style>
+    <div class="modal fade" id="RateUs" tabindex="-1" role="dialog"
+         aria-labelledby="RateUsTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <form>
+                <div class="modal-content p-4">
+                    <div class="d-flex justify-content-between align-items-center p-4">
+                        <h5 class="modal-title" id="RateUsTitle">PLEASE RATE OUR WEBSITE</h5>&nbsp;&nbsp;&nbsp;
+                        <a href="javascript:void(0)" id="closeModalButton" class="float-end text-dark"><i
+                                class="fa fa-times"></i></a>
+                    </div>
+                    <p class="modal-title text-center " id="RateUsTitle">HOW EASY TO OR DIFFICULT WAS IT TO USE<br>
+                        OUR WEBSITE</p>
+                    <div class="form-group text-center mt-3">
+                        <div id="rating" class="star-rating">
+                            <i class="fas fa-star" data-value="1"></i>
+                            <i class="fas fa-star" data-value="2"></i>
+                            <i class="fas fa-star" data-value="3"></i>
+                            <i class="fas fa-star" data-value="4"></i>
+                            <i class="fas fa-star" data-value="5"></i>
+                        </div>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="form-group mt-2 mb-2">
+                            <label for="email"><b>Name</b></label>
+                            <input type="text" class="form-control" style="background-color: #f1f2f4;font-size: 12px;"
+                                   id="email" placeholder="ENTER YOUR NAME" required>
+                        </div>
+                        <div class="form-group mt-2 mb-2">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" style="background-color: #f1f2f4;font-size: 12px;"
+                                   id="email" placeholder="ENTER YOUR EMAIL" required>
+                        </div>
+                        <div class="form-group mt-2 mb-2">
+                            <label for="email">Message</label>
+                            <textarea class="form-control" id="message"
+                                      style="background-color: #f1f2f4;font-size: 12px;" rows="3"
+                                      placeholder="ENTER YOUR MESSAGE" style="height: auto;"
+                                      required></textarea>
+                        </div>
+                    </div>
+                    <button type="button" style="background-color: #f9b43c" class="btn p-2 text-white">Submit</button>
+
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+    <script>
+        $(document).ready(function () {
+            setTimeout(function () {
+                $('#RateUs').modal('show');
+            }, 1); // 10000 milliseconds = 10 seconds
+        });
+    </script>
+    <script>
+        $(document).ready(function () {
+            $('#rating .fa-star').on('click', function () {
+                var ratingValue = $(this).data('value');
+                $('#rating .fa-star').removeClass('checked');
+                $(this).prevAll().addBack().addClass('checked');
+                console.log('Rating selected:', ratingValue);
+            });
+        });
+        document.getElementById('closeModalButton').addEventListener('click', function () {
+            $('#RateUs').modal('hide');
+        });
+    </script>
 
 {% endblock content %}
